fix line wrap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,8 +168,6 @@ hr.black {
   background-color: transparent;
 }
 
-// Tooltips - https://www.w3schools.com/css/css_tooltip.asp
-
 .hint {
   position: relative;
   display: inline-block;
@@ -178,12 +176,12 @@ hr.black {
 
 .hint .hint-text {
   visibility: hidden;
-  width: 120px;
   background-color: #000040;
   color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
+  white-space:nowrap;
   
   /* Position the hint-text */
   position: absolute;
